# Project4Group2

./: .gitignore  CMakeLists.txt  Group2.sln  Group2.vcxproj  Group2.vcxproj.filters  Linear_fit.py  README.md  config.yaml  hik_camera.cpp  hik_camera.h  main.cpp  main.h
Detector/: Detector.cpp  Detector.h  box.h
HandEye/: HandEyeTransform.cpp  HandEyeTransform.h  HandEyeTransmit.cpp  HandEyeTransmit.h
HikCam/: hik_camera.cpp  hik_camera.h
HikCam/Includes/: MvCameraControl.h  MvObsoleteInterfaces.h
Includes/modbus/: modbus.rc
Libs/: modbus.lib  modbusd.lib  yaml-cpp.lib
Modbus/: ModbusClient.cpp  ModbusClient.h
Socket/: SocketClient.cpp  SocketClient.h
hak_cam/: hik_camera.cpp  hik_camera.h
hik_cam/: hik_camera.cpp  hik_camera.h
hik_cam/Includes/: CameraParams.h  MvErrorDefine.h  ObsoleteCamParams.h
libs/: MvCameraControl.lib
